prmeière et deuxieme partie

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             <h2>Son enfance ...</h2>
             <p> Damso est né à Kinshasa le 10 mai 1992. Sa mère, sociologue, et son père, cardiologue, fuient la République démocratique du Congo avec leur fils à cause d'un conflit armé les menaçant. Il en parle d’ailleurs dans plusieurs de ses chansons. Lui et sa famille s’installent ensuite en Belgique lorsqu’il a 9 ans dans la commune de Kraainem, se situant en périphérie de Bruxelles. A 22 ans il déménage pendant 3 ans dans le quartier congolais de Matonge à Ixelles, une commune de Bruxelles. </p>
         </section>
-        
+        <img class="fit-picture"
+        src=”https://static.skyrock.fm/static/sePb8npeBrHs4pKL-ql6JQ.KjyKyZ8-gFjjEu3kQfI1HA.abf300g300.jpg” 
+        alt=”Damso gang”>
     
     </body>
  <head>
