--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       </article>
       <article>
-        <h3> le futur ? </h3>
+        <h3> Le futur ? </h3>
         <p> Damso pensait à arrêter sa carrière d’ici 2022 si son dernier album “QALF infinity” faisait un succès, voulant donc partir à l’etranger et se ressourcer avec la nature tout en continuant de faire des musiques pour le plaisir. Il commence à envisager cela fortement en raison de cette industrie qui “tue les artistes” à cause d’une recherche incessante de buzz.
           Damso donc après la sortie de son derniere album reflechi encore a son futur tout en faisant des sons pour son plaisir. </p>
 
@@ -50,7 +50,7 @@
 
     <h2>Damso un artiste polémique</h2>
     <section>
-      <h3>l'hymne de l'équipe belge</h3>
+      <h3>L'hymne de l'équipe belge</h3>
       <article>
         <h4>La polemique</h4>
         <p>Ayant quelques fan dans l’équipe de Belgique et à leurs initiatives, la RBFA ( Royal Belgian Football Assisiation ) a confié à Damso l’écriture de l’hymne de l’équipe de Belgique.
