--- a/index.html
+++ b/index.html
@@ -183,7 +183,82 @@ Fais pas genre, fais pas genre, qu'on n'va pas le faire (nan, nan, nan)<br>
 J't'entends t'épiler la chatte (bah ouais)<br>
 Fais pas genre, fais pas genre, qu'on va pas le faire (nan, nan, nan)<br>
 J't'entends t'épiler la chatte (bah ouais)<br>
- </section>
+
+<h2>Feu de bois</h2>
+<iframe width="1904" height="768" src="https://www.youtube.com/embed/Kfxwaq-gx6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3>Paroles :</h3>
+
+Baby, baby<br>
+Oh, ba-ba-baby<br>
+Baby-y-y-y<br>
+Feu de bois, jeu de voix<br>
+Suis-moi, je te veux pas, fuis-moi, je te veux toi<br>
+Feu de bois, jeu de trois, un des deux est de moi<br>
+Un des trois est de nous, aidez-nous, aidez-moi<br>
+Feu de bois, jeu de bois, tu me dois, Dieu te voit<br>
+Montre-moi que du doigt ce que t'as fait de moi<br>
+Que de joie, que de rois, que d'épopées, dis-moi ce qu'on a fait de toi<br>
+Sur le toit, sûr de toi, tu t'y crois, c'est déjà ce qu'on a fait de moi<br>
+Fait de toi, fait de nous<br>
+Prends pas la tête, je n'tiens plus le coup<br>
+On bavardait sans dire un mot, le bruit de mon silence en dit long<br>
+Sentiments grandissants figeant l'ego<br>
+Prison de mots, absence de compliments<br>
+J'suis en attente, en apprentissage<br>
+Très peu sage, j'ai vu l'âge à la nage, je fuis l'alcoolisme<br>
+Sur la blanche page, j'agonise<br>
+Mille latences entre c'que je pense et ce que je dis<br>
+Ce que j'obtiens et ce que je vise<br>
+Soit c'est le père ou bien le fils, soit la be-her ou bien la tise<br>
+Que la nightzer, ouais<br>
+Je sais c'que tu penses de nous<br>
+Quand tu dis que tu n'sais plus quoi penser de nous<br>
+Je sais c'que tu veux vraiment<br>
+Quand tu dis que tu n'sais plus c'que tu veux vraiment<br>
+Je sais qu'tu n'as plus le temps<br>
+Quand tu dis que tu penses qu'il te faut plus de temps<br>
+Baby (ohlala), baby (ohlala)<br>
+Oh ba-ba-baby (oui, c'est ça)<br>
+Baby-y-y-y<br>
+Baby (ohlala), baby (ohlala)<br>
+Oh ba-ba-baby (oui, c'est ça)<br>
+Baby-y-y-y<br>
+Tu parles de moi, crache dans mon dos<br>
+Je parle de toi, crache dans ta bouche<br>
+J's'rai toujours un vrai négro<br>
+Que t'aies tes règles ou que t'accouches<br>
+J'te vois à travers le rideau<br>
+Je t'observe quand tu te touches<br>
+J'sais pas si c'est toi ou c'est l'eau<br>
+J'vois pas quand tu mouilles dans la douche<br>
+Fume quand relation s'effrite, Lune, Soleil dans même rayon<br>
+Qu'une parole tant que j'écris, brume, gondole dans l'océan<br>
+Femmes aux yeux d'hommes sont que des filles, sentiments plongés dans l'néant<br>
+Pluie, averses de ressentis, même si on se prend les devants<br>
+Je t'aime quand je suis dedans, dehors, je suis plein de mépris<br>
+Ta fragilité n'est plus à prouver<br>
+Quand tout allait mal et qu'on le savait pas<br>
+On passait du temps à essayer d'en passer<br>
+Avec toi, le prix d'un Dam mais sans toi et moi<br>
+J'ai brûlé tes lettres dans un feu de bois<br>
+Mais j'ai toujours en tête nos jeux de voix<br>
+J'ai suivi l'oseille, toi, la fée des bois<br>
+J'ai toujours en tête ce que t'as fait de moi<br>
+Que la nightzer, ouais<br>
+Je sais c'que tu penses de nous<br>
+Quand tu dis que tu n'sais plus quoi penser de nous<br>
+Je sais c'que tu veux vraiment<br>
+Quand tu dis que tu n'sais plus c'que tu veux vraiment<br>
+Je sais qu'tu n'as plus le temps<br>
+Quand tu dis que tu penses qu'il te faut plus de temps<br>
+Baby (ohlala), baby (ohlala)<br>
+Oh ba-ba-baby (oui, c'est ça)<br>
+Baby-y-y-y<br>
+Baby (ohlala), baby (ohlala)<br>
+Oh ba-ba-baby (oui, c'est ça)<br>
+Baby-y-y-y<br>
+Pou-poum, pou-poum, pou-poum<br>
+</section>
 
 
 
