--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
      src="https://static.fnac-static.com/multimedia/Images/FR/NR/33/c4/c3/12829747/1540-1/tsp20210216123133/Batterie-faible.jpg"
      alt="Photo album Batterie faible de Damso">
         </section>
-<<<<<<< Updated upstream
 
     
     <section>
@@ -259,16 +258,115 @@ Baby (ohlala), baby (ohlala)<br>
 Oh ba-ba-baby (oui, c'est ça)<br>
 Baby-y-y-y<br>
 Pou-poum, pou-poum, pou-poum<br>
+
+<h2>Debrouillard</h2>
+<iframe width="900" height="506" src="https://www.youtube.com/embed/S4FvhbLhBbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3>Paroles :</h3>
+
+Yeah<br>
+P'tain dans le casque c'est vraiment autre<br>
+Univers<br>
+Okay<br>
+Demandez pas c'que je fais dans la vie<br>
+J'suis fonce-dé avec deux-trois you-vois du quartier<br>
+J'fume un pilon sur l'toit de la ville<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (eh)<br>
+Demandez pas c'que je fais dans la vie (dans la vie!)<br>
+J'suis fonce-dé avec deux-trois you-vois du quartier<br>
+J'fume un pilon sur l'toit de la ville (de la ville!)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (eh)<br>
+Fais pas l'amour à une femme comme un homme<br>
+La Bible dit qu'c'est une abomination<br>
+Alors à chaque fois qu'je t'encule<br>
+J'demande pardon au ciel pour faute d'inattention (amen!)<br>
+J'suis pas là pour faire la morale<br>
+La morale a fait de moi c'que je suis devenu<br>
+Ma vie s'inspire d'la SABAM<br>
+Plus tu gagnes du blé, plus j'te baise sans retenue<br>
+J'compte pas obtenir de diplôme<br>
+Comme Dolfa, négro, pour moi la school c'est finished<br>
+Vers le succès je marche, j'ai des ampoules aux pieds<br>
+À chacun d'mes pas c't'un remake de "Billie Jean" (Jackson)<br>
+La vie ne fait aucun cadeau<br>
+Le Père Noël n'existe pas dans la rue<br>
+Passeur avec des produits illégaux<br>
+Les keufs t'attrapent, négro, tu n'm'as jamais vu (John Doe)<br>
+Un gun, un flow, j'te tire dessus<br>
+Et j'te transperce le dard<br>
+J'vois jamais d'courses de spermato'<br>
+Mais j'donne beaucoup de départs (rao, rao)<br>
+J'suis dans le Pacifique dit-on, je débite des proses et des vers<br>
+Je suis un pacifiste, quiconque me défie repose en paix<br>
+Le silence est d'or donc chut, quand je t'encule ne crie pas<br>
+J'veux entendre que le frottement des pores<br>
+Et le bruit des mes grosses testicules sur ton 'uc<br>
+Grosse pute, tu crois que t'es où là?<br>
+Toi et ta schnek, allez faire de la mula<br>
+Ramène l'oseille à mes you-vois<br>
+J'n'ai aucun remord, t'es Sarah Connor<br>
+Je suis Terminator dans ta tte-cha (Schwarzy)<br>
+Demandez pas c'que je fais dans la vie (dans la vie!)<br>
+J'suis fonce-dé avec deux-trois you-vois du quartier<br>
+J'fume un pilon sur l'toit de la ville (de la ville!)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (eh)<br>
+Demandez pas c'que je fais dans la vie (dans la vie!)<br>
+J'suis fonce-dé avec deux-trois you-vois du quartier<br>
+J'fume un pilon sur l'toit de la ville (de la ville!)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (eh)<br>
+Ma fille, si j'prends pour dix ans ferme<br>
+Ne noie pas ton chagrin dans du sperme (nager)<br>
+Vas prendre le Glock dans la chambre de papa<br>
+Ensuite tu le donneras à tonton Dolfa<br>
+Qui s'en servira contre la grosse lope-sa<br>
+Et c'est seulement quand cette balance avouera<br>
+Que tu lui diras de l'enculer de sorte à ce que jamais son trou se referme<br>
+OPG déclasse leurs teams<br>
+Vont chercher renfort en franc-maçonnerie<br>
+Le sang remplace l'encre de Chine<br>
+Le bruit de ta mort remplace ma sonnerie (allô?)<br>
+Il n'y a rien de plus dangereux que la main tendue<br>
+J'veux pas d'ton aide, évitons d'gros litiges<br>
+Un cadeau empoisonné bien vendu<br>
+Une mère porteuse séropositive<br>
+Ils sont comme chaussures devant mosquée<br>
+Sont recalés à l'entrée, vont devoir rentrer pioncer (pioncer)<br>
+Yeurmé à vie, rien n'est nuancé (nuancé)<br>
+J'te vois comme Jay Z voit Beyoncé (Beyoncé)<br>
+Une salope que je n'ai pas besoin de financer (no)<br>
+Un bustier en "I" qui se finit en "C" (gros cul)<br>
+Mes sons passent en club, t'es ambiancé (yeh)<br>
+Seuls les darons sont mes créanciers (bah ouais)<br>
+Ta meuf a un anneau dans le ventre<br>
+Je l'ai doigtée au point que j'en suis passé entre (in)<br>
+Autrement dit, nous sommes fiancés (yes)<br>
+Balance, j't'en prie, vas nous dénoncer (snitch)<br>
+T'façon les preuves sont déjà dissimulées<br>
+Fais tout ce qui rémunère, le nègre est affamé<br>
+Ne me demandez pas quelle est ma mission sur Terre<br>
+J'suis débrouillard à jamais (no)<br>
+Demandez pas c'que je fais dans la vie (dans la vie!)<br>
+J'suis fonce-dé avec deux-trois you-vois du quartier<br>
+J'fume un pilon sur l'toit de la ville (de la ville!)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (eh)<br>
+Demandez pas c'que je fais dans la vie (dans la vie!)<br>
+J'suis fonce-dé avec deux-trois you-vois du quartier<br>
+J'fume un pilon sur l'toit de la ville (de la ville!)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
+Débrouillard à jamais (eh)<br>
 </section>
 
 
 
 </body>
 </DOCTYPE html>
-=======
-    </body>
-
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/S4FvhbLhBbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
->>>>>>> Stashed changes
