--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 
 <!DOCTYPE html>
+<html lang="fr">
 
     <head>
+      <meta charset="utf-8">
         <title> Fanpage de Damso</title>
         <meta charset="utf-8">
 
