--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <head>
       <meta charset="utf-8">
         <title> Fanpage de Damso</title>
-        <meta charset="utf-8">
 
     </head> 
     <body>
@@ -16,7 +15,7 @@
         </section>
         <img class ="fitpicture" 
         src="https://static.skyrock.fm/static/sePb8npeBrHs4pKL-ql6JQ.KjyKyZ8-gFjjEu3kQfI1HA.abf300g300.jpg" 
-        alt="Damsogang"> 
+        alt="Damso faisant son signe"> 
     
         <h2>Damso rappeur belge talentueux</h2>
         <section>
@@ -28,7 +27,7 @@
             </article>
             <img class="fit-picture"
      src="https://static.fnac-static.com/multimedia/Images/FR/NR/33/c4/c3/12829747/1540-1/tsp20210216123133/Batterie-faible.jpg"
-     alt="Photo album Batterie faible de Damso">
+     alt="Photo de l'album Batterie faible de Damso">
         </section>
 
     
