--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ Il sortira finalement le son dans Lithopédion et le nommera « Humain » </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/UtFa--nxII8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
         <h4>Paroles :</h4>
-<quote>
+<blockquote cite="https://genius.com/Damso-fais-moi-un-vie-lyrics">
+  <p>Damso - Fais moi un vie</p>
 Ohlala (fais-moi, fais-moi un #Vie) <br>
 Dems (fais-moi, fais-moi un #Vie) <br>
 (Fais-moi, fais-moi un #Vie)  <br>
@@ -127,12 +128,13 @@ Ici c'est le jour et la nuit<br>
 Mais j'suis toujours dans le tiekson malgré tous mes ennemis<br>
 Fais-moi, fais-moi un #Vie<br>
 (Fais-moi, fais-moi un #Vie)<br>
-</quote>
+</blockquote>
 
-<quote>
+
 <h2>QALF Morose</h2>
 <iframe width="1904" height="768" src="https://www.youtube.com/embed/Y9NUjVvKq6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h3>Paroles :</h3>
+<blockquote cite="https://genius.com/Damso-morose-lyrics">
 J'suis tellement loin, c'est parti pour quelques heures<br>
 Écrire sur le monde, exilé dans simulateur<br>
 Près des couleurs, sable en mouvement<br>
@@ -188,13 +190,13 @@ Fais pas genre, fais pas genre, qu'on n'va pas le faire (nan, nan, nan)<br>
 J't'entends t'épiler la chatte (bah ouais)<br>
 Fais pas genre, fais pas genre, qu'on va pas le faire (nan, nan, nan)<br>
 J't'entends t'épiler la chatte (bah ouais)<br>
-</quote>
+</blockquote>
 
 <h2>Feu de bois</h2>
 <iframe width="1904" height="768" src="https://www.youtube.com/embed/Kfxwaq-gx6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h3>Paroles :</h3>
 
-<quote>
+<blockquote cite="https://genius.com/Damso-feu-de-bois-lyrics">
 Baby, baby<br>
 Oh, ba-ba-baby<br>
 Baby-y-y-y<br>
@@ -265,13 +267,14 @@ Baby (ohlala), baby (ohlala)<br>
 Oh ba-ba-baby (oui, c'est ça)<br>
 Baby-y-y-y<br>
 Pou-poum, pou-poum, pou-poum<br>
-</quote>
+</blockquote>
 
 <h2>Debrouillard</h2>
 <iframe width="900" height="506" src="https://www.youtube.com/embed/S4FvhbLhBbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h3>Paroles :</h3>
 
-<quote>
+<blockquote cite="https://genius.com/Damso-debrouillard-lyrics"
+
 Yeah<br>
 P'tain dans le casque c'est vraiment autre<br>
 Univers<br>
@@ -373,7 +376,7 @@ J'fume un pilon sur l'toit de la ville (de la ville!)<br>
 Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
 Débrouillard à jamais (jamais), jamais (jamais), jamais (no)<br>
 Débrouillard à jamais (eh)<br>
-</quote>
+</blockquote>
 </section>
 </body>
 </DOCTYPE html>
