--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Pou-poum, pou-poum, pou-poum<br>
 <iframe width="900" height="506" src="https://www.youtube.com/embed/S4FvhbLhBbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h3>Paroles :</h3>
 
-<blockquote cite="https://genius.com/Damso-debrouillard-lyrics"
+<blockquote cite="https://genius.com/Damso-debrouillard-lyrics">
 
 Yeah<br>
 P'tain dans le casque c'est vraiment autre<br>
@@ -379,4 +379,4 @@ Débrouillard à jamais (eh)<br>
 </blockquote>
 </section>
 </body>
-</DOCTYPE html>
+</html>
